--- a/SystemProgramming/MainWindow.xaml
+++ b/SystemProgramming/MainWindow.xaml
@@ -11,10 +11,19 @@
             <Label Content="Лабораторные работы" FontSize="30" FontWeight="Bold" HorizontalAlignment="Center" />
             <Label Content="по системному программированию" FontSize="16" FontWeight="Bold" HorizontalAlignment="Center" />
 
+
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <Label Content="Вариант: " Margin="2" FontSize="14"/>
+                <ComboBox x:Name="Variant_ComboBox" Width="80" SelectionChanged="Variant_ComboBox_SelectionChanged" Margin="0 10 0 0" >
+                    <ComboBoxItem IsSelected="True">1</ComboBoxItem>
+                    <ComboBoxItem>2</ComboBoxItem>
+                </ComboBox>
+            </StackPanel>
+
             <StackPanel Margin="40">
                 <Button Content="Информация" Name="info_button" Width="160" Height="30" Margin="10"/>
-                <Button Content="1-ый Семестр" Name="first_labs_menu_button" Width="160" Height="30" Margin="10"/>
-                <Button Content="2-ой Семестр" Name="second_labs_menu_button" Width="160" Height="30" Margin="10"/>
+                <Button Content="1-ый Семестр" Name="first_labs_menu_button" Width="160" Height="30" Margin="10" Click="Open_Menu_First_Labs" />
+                <Button Content="2-ой Семестр" Name="second_labs_menu_button" Width="160" Height="30" Margin="10" Click="Open_Menu_Second_Labs" />
                 <Button Content="Выход" Name="exit_button" Width="160" Height="30" Margin="10"/>
             </StackPanel>
         </StackPanel>
