--- a/SystemProgramming/second_labs/forms/lab8/Lab8_Even_Variants_Second.xaml
+++ b/SystemProgramming/second_labs/forms/lab8/Lab8_Even_Variants_Second.xaml
@@ -5,9 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SystemProgramming.second_labs.forms.lab8"
         mc:Ignorable="d"
-        Title="Lab8_Even_Variants_Second" Height="450" Width="800">
+        Title="Lab8_Even_Variants_Second" Height="500" Width="800">
     <Grid>
-        <DataGrid Name="Table">
-        </DataGrid>
+
+        
+
+
+        <StackPanel>
+            <Label Name="Render_Button" Content="Обработка" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" MouseDoubleClick="Render_Button_MouseDoubleClick" />
+            
+            <DataGrid Name="Table" Height="250" Width="370" Margin="20"/>
+
+            <Label Content="Размер Таблицы" HorizontalAlignment="Center" FontSize="20" />
+
+            <Label Content="Колонки" HorizontalAlignment="Center" FontSize="14" />
+            <ComboBox Width="160" Margin="5">
+                <ComboBoxItem>1</ComboBoxItem>
+                <ComboBoxItem>2</ComboBoxItem>
+                <ComboBoxItem>3</ComboBoxItem>
+                <ComboBoxItem>4</ComboBoxItem>
+                <ComboBoxItem IsSelected="True">5</ComboBoxItem>
+                <ComboBoxItem>6</ComboBoxItem>
+                <ComboBoxItem>7</ComboBoxItem>
+                <ComboBoxItem>8</ComboBoxItem>
+                <ComboBoxItem>9</ComboBoxItem>
+                <ComboBoxItem>10</ComboBoxItem>
+            </ComboBox>
+
+            <Label Content="Строчки" HorizontalAlignment="Center" FontSize="14" />
+            <ScrollBar Name="RowScollBar" Maximum="10" Minimum="1" Value="5"   ValueChanged="RowScollBar_ValueChanged"/>
+        
+            
+        </StackPanel>
     </Grid>
 </Window>
