[UPD]: disgn form lab8 (second)

--- a/SystemProgramming/second_labs/forms/lab8/Lab8_Even_Variants_Second.xaml
+++ b/SystemProgramming/second_labs/forms/lab8/Lab8_Even_Variants_Second.xaml
@@ -5,37 +5,46 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SystemProgramming.second_labs.forms.lab8"
         mc:Ignorable="d"
-        Title="Lab8_Even_Variants_Second" Height="500" Width="800">
+        Title="Lab8_Even_Variants_Second" Height="600" Width="600"  MinHeight="500" MinWidth="400">
     <Grid>
-
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Name="UpdateTable_MenuButton" Header="Обновить таблицу" Click="UpdateTable_MenuButton_Click"/>
+        </Menu>
         
-
-
         <StackPanel>
-            <Label Name="Render_Button" Content="Обработка" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" MouseDoubleClick="Render_Button_MouseDoubleClick" />
-            
-            <DataGrid Name="Table" Height="250" Width="370" Margin="20"/>
 
-            <Label Content="Размер Таблицы" HorizontalAlignment="Center" FontSize="20" />
+            <Label HorizontalAlignment="Center" Content="Размер Таблицы" FontSize="20"  />
 
-            <Label Content="Колонки" HorizontalAlignment="Center" FontSize="14" />
-            <ComboBox Width="160" Margin="5">
-                <ComboBoxItem>1</ComboBoxItem>
-                <ComboBoxItem>2</ComboBoxItem>
-                <ComboBoxItem>3</ComboBoxItem>
-                <ComboBoxItem>4</ComboBoxItem>
-                <ComboBoxItem IsSelected="True">5</ComboBoxItem>
-                <ComboBoxItem>6</ComboBoxItem>
-                <ComboBoxItem>7</ComboBoxItem>
-                <ComboBoxItem>8</ComboBoxItem>
-                <ComboBoxItem>9</ComboBoxItem>
-                <ComboBoxItem>10</ComboBoxItem>
-            </ComboBox>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <StackPanel Margin="0 0 40 0">
+                    <Label Content="Колонки" HorizontalAlignment="Center" FontSize="14" />
+                    <ComboBox Width="160" Margin="5">
+                        <ComboBoxItem>1</ComboBoxItem>
+                        <ComboBoxItem>2</ComboBoxItem>
+                        <ComboBoxItem>3</ComboBoxItem>
+                        <ComboBoxItem>4</ComboBoxItem>
+                        <ComboBoxItem IsSelected="True">5</ComboBoxItem>
+                        <ComboBoxItem>6</ComboBoxItem>
+                        <ComboBoxItem>7</ComboBoxItem>
+                        <ComboBoxItem>8</ComboBoxItem>
+                        <ComboBoxItem>9</ComboBoxItem>
+                        <ComboBoxItem>10</ComboBoxItem>
+                    </ComboBox>
+                </StackPanel>
 
-            <Label Content="Строчки" HorizontalAlignment="Center" FontSize="14" />
-            <ScrollBar Name="RowScollBar" Maximum="10" Minimum="1" Value="5"   ValueChanged="RowScollBar_ValueChanged"/>
-        
-            
+                <StackPanel>
+                    <Label Content="Строчки" HorizontalAlignment="Center" FontSize="14" />
+                    <ScrollBar Name="RowScollBar" Maximum="10" Minimum="1" Value="5"   ValueChanged="RowScollBar_ValueChanged"/>
+                </StackPanel>
+            </StackPanel>
+
+            <DataGrid Name="Table" Height="250" Width="370" Margin="10"/>
+
+            <TextBox Text="" Width="300" Height="20" Margin="10"/>
+
+            <Border BorderBrush="Black" BorderThickness="1" Width="360" Cursor="Hand">
+                <Label Name="Render_Button" Content="Обработка" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" MouseDown="Render_Button_MouseDown" />
+            </Border>
         </StackPanel>
     </Grid>
 </Window>
