--- a/SystemProgramming/second_labs/forms/lab10/DeleteNote.xaml
+++ b/SystemProgramming/second_labs/forms/lab10/DeleteNote.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="lab10_var3.DeleteNote"
+﻿<Window x:Class="SystemProgramming.second_labs.forms.lab10.DeleteNote"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:lab10_var3"
+        xmlns:local="clr-namespace:SystemProgramming.second_labs.forms.lab10"
         mc:Ignorable="d"
         Title="DeleteNote" Height="450" Width="800">
     <Grid>
